# millesabords

./: .gitignore  README.md  TODO.md  action_plan.md  card_implementation_plan.md  compare_strategies.py  export_data.py  game_rules.md  main.py  prebuild.py  pyproject.toml  simulate.py  specs.md  verify_solver.py
analysis/: compare_strategies.py  expected_values.md  plot_cards.py  simulate.py  verify_solver.py
docs/: app.js  export_data.py  fortune_cards.html  index.html  score_distributions.html  style.css  sw.js
docs/data/: animals.json  coin.json  default.json  diamond.json  guardian.json  peace.json  pirate-ship-2.json  pirate-ship-3.json  pirate-ship-4.json  pirate.json  skull-1.json  skull-2.json  storm.json  treasure-island.json
fortune_cards/: PLAN.md  generate_images.py
fortune_cards/cards/: la_boussole_brisee.md  la_carte_blanche.md  la_malediction_doree.md  la_maree_montante.md  la_poudre_a_canon.md  la_sirene.md  la_tempete.md  la_traversee.md  la_vague_scelerete.md  lalbatros.md  laube_rouge.md  le_chant_du_cygne.md  le_coffre_des_ames.md  (+9 more)
solver/: actions.py  dp.py  model.py  report.py  roll.py  scoring.py  stats.py
tests/: test_actions.py  test_animals.py  test_animaux.py  test_bateau_pirate.py  test_dp.py  test_gardienne.py  test_gold_coin_diamond.py  test_guardian.py  test_magie_pirate.py  test_peace.py  test_piece_d_or_diamant.py  test_pirate.py  test_pirate_magic.py  test_pirate_ship.py  test_roll.py  test_scoring.py  test_skull_card.py  test_storm.py  test_tete_de_mort.py  test_treasure_island.py
webapp/: manifest.json  style.css
(+4 files in other folders)
