[project]
name = "mille-sabords"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
    "wcwidth>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
