[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["solver", "analysis"]

[project]
name = "mille-sabords"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pillow>=12.2.0",
    "plotly>=6.7.0",
    "seaborn>=0.13.2",
    "tabulate>=0.10.0",
    "wcwidth>=0.6.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
